# fuxmas

./: LICENSE  README.md
mapping.module/: .gitignore  Makefile  docker-compose.yaml  main.py  pyproject.toml
mapping.module/pkg/: file.py  snake_case.py
mapping.module/pkg/graylabel/: __init__.py  clip.py  common.py  constants.py  detect.py  exceptions.py  tone.py
mapping.module/src/: factory.py
mapping.module/src/api/: __init__.py  v1.py
mapping.module/src/common/: config.py  logging.py  redis.py
mapping.module/src/mapping/: __init__.py  dto.py  entity.py  enums.py  exceptions.py  expose_file.py  gc.py  graylabel.py  interfaces.py  repository.py  storage.py  strategy.py
